# walmart-ml

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml  docker_override.yaml
data/interim/: walmart_clean.parquet
data/processed/: walmart_minimal.parquet  walmart_no_new_flags.parquet
docs/images/: .$walmart_process.drawio.bkp  walmart_process.drawio
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_model_development.ipynb  05_model_evaluation.ipynb  06_model_operationalization.ipynb
notebooks/.ipynb_checkpoints/: business_understanding-checkpoint.ipynb
outputs/2026-01-29/15-18-33/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/15-24-08/.hydra/: hydra.yaml
outputs/2026-01-29/16-04-20/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/16-05-58/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/16-06-11/.hydra/: hydra.yaml
outputs/2026-01-29/16-11-14/.hydra/: hydra.yaml
outputs/2026-01-29/16-23-39/.hydra/: hydra.yaml
outputs/2026-01-29/16-26-42/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-29/16-28-41/.hydra/: hydra.yaml
outputs/2026-01-29/16-50-57/.hydra/: hydra.yaml
outputs/2026-01-29/17-18-14/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-15/15-08-56/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-15/19-08-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-15/19-11-02/.hydra/: hydra.yaml
src/ml/: config.py  main.py
src/ml/data_pipeline/: data_pipeline.py  main.py
src/ml/train_pipeline/: main.py  train_pipeline.py
tests/: test_anomaly_flags.py
(+23 files in other folders)
